[package]
name = "meson"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.27"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
